    - Graph/TransitiveClosure:
      - Fixed calculating vertexes reachability for paths with length more
        than 2.
    - Worker:
      - While splitting heterogeneous actions, pay the first attention to
        action dependencies which are originated from 'Conflicts'. No longer
        pass '--force-conflicts' to dpkg. Thanks to James Vega.
        (Closes: #556650)
    - Download:
      - Progresses/Console:
        - Fixed a divide-by-zero crash with zero-sized files. Thanks to
          James Vega. (Closes: #557661)

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Thu, 19 Nov 2009 18:34:05 +0200

cupt (1.3.0) unstable; urgency=low

  * cupt:
    - 'rdepends': memoize parsed versions.
    - Management actions:
      - Support '@<file>' syntax for reading arguments from files. The idea of
        the patch by Jean-Christophe Dubacq. (Closes: #554356)
    - Don't crash when run with no parameters (once again). Thanks to
      Didier Raboud. (Closes: #547952)
  * Cupt:
    - Cache:
      - 'get_satisfying_versions': don't sort result.
      - 'get_sorted_pinned_versions': removed ability to memoize it.
      - BinaryVersion:
        - Rewritten parsing the version entry using different approach.
          Speeded up parsing significantly.
        - New field 'others'.
        - [API break] 'homepage': removed, it now belongs to 'others' if
          supplied.
      - SourceVersion:
        - Rewritten parsing the version entry using different approach.
        - Support 'Binary' field span to multiple lines.
        - Support native packages with dashed version strings with a warning.
        - Recognize ".debian.tar.<ext>" files as diffs.
        - New field 'others'.
        - [API break] 'uploaders': became reference to array instead of string.
    - System:
      - Resolvers/Native:
        - Don't pre-schedule any relations for newly-installed versions, leave
          all work to main resolver. Also (Closes: #555209)